modify browse.json & set title api

--- a/less/app.less
+++ b/less/app.less
@@ -2441,7 +2441,8 @@ body {
 	width: 17%;
 	padding: 30px 0;
 	background: @browseIconGray;
-	color: #fff;
+	color: @white;
+	cursor: pointer;
 }
 
 #access .browse .info .active {
