--- a/css/app.css
+++ b/css/app.css
@@ -2112,6 +2112,7 @@ body {
   padding: 30px 0;
   background: #999999;
   color: #fff;
+  cursor: pointer;
 }
 #access .browse .info .active {
   background: #3DA1E5;
