--- a/less/app.less
+++ b/less/app.less
@@ -1067,12 +1067,7 @@ body {
   border-color:#b4d0cf;
   color:#5b8a90;
 }
-#repoDetail .header {
-  padding-top: 8px;
-  padding-bottom: 8px;
-  margin: 10px auto;
-  background: @detailGray;
-}
+
 #repoDetail .fa-star {
   cursor: pointer;
 }
@@ -1088,14 +1083,24 @@ body {
   font-size: @baseSize;
 }
 #repoDetail .repo-nav {
-	width: 100%;
 	border: none;
-  background: @userNavGray;
+	padding: 0 0 20px;
+	background: @detailGray;
+  height: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+	#repoDetail .repo-nav {
+		height: auto;
+	}
+}
+
+#repoDetail .user-content {
+	background: @outLetGray;
 }
 
 #repoDetail .repo-nav li {
-	// width: 20%;
-	// background: @userNavGray;
+	background: @detailGray;
 	text-align: center;
 	padding: 0;
 	border: none;
@@ -1107,19 +1112,18 @@ body {
 
 #repoDetail .repo-nav li>a:hover {
 	background: none;
-	// color: @white;
 	border: none;
 	border-radius: 0;
 }
 
 #repoDetail .repo-nav>li {
 	margin: 0;
+	width: 100%;
 }
 
 #repoDetail .repo-nav .active,
 #repoDetail .repo-nav .active>a {
-	background: @userNavBlue;
-	color: @white;
+	background: @outLetGray;
 	border: none;
 	border-radius: 0;
 }
@@ -1453,26 +1457,63 @@ body {
 }
 
 #repoDetail .repo-type {
-	text-align: center;
-	padding: 0;
-	height: 100%;
-	background: @detailGray;
+	float: left;
+	position: relative;
+	// text-align: center;
+	// padding: 0;
+	// height: 100%;
+	// background: @detailGray;
 }
 
-#repoDetail .head {
-	background: @detailGray;
+#repoDetail .chosed-type {
+	display: block;
+	width: 160px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 20px 0 10px;
+	color: @white;
+	background: @orange;
+	position: relative;
+}
+
+#repoDetail .chosed-type i {
+	position: absolute;
+	right: 8px;
+	top: 12px;
+}
+
+#repoDetail .repo-type ul {
+	position: absolute;
+	top: 40px;
+	left: 0;
+	background: @userFormWhite;
+	width: 160px;
+	z-index: 10000;
 }
 
 #repoDetail .repo-type li {
-	padding: 12px 0;
+	height: 44px;
+	line-height: 44px;
 	width: 100%;
-	// background: @userNavBlue;
+	cursor: pointer;
+	padding-left: 12px;
 }
+
+#repoDetail .repo-type li:hover {
+	background: @createGray;
+	color: @white;
+}
+
+#repoDetail .head {
+	padding: 40px 0;
+	background: @detailGray;
+}
+
 // #repoDetail .nav>li>a {
 // 	padding-top: 0;
 // 	padding-bottom: 0;
-// 	height: 44px;
-// 	line-height: 44px;
+// 	max-height: 60px;
+// 	line-height: 60px;
 // }
 
 // #repoDetail .repo-type li:hover {
@@ -1485,9 +1526,9 @@ body {
 	color: @black;
 }
 #repoDetail .content {
+	height: e("calc(100% - 140px)");
+	height: e("-webkit-calc(100% - 140px)"); 
 	background: @outLetGray;
-	height: e("calc(100% - 170px)");
-	height: e("-webkit-calc(100% - 170px)");
 }
 /* repo detail end */ 
 
@@ -2008,6 +2049,7 @@ body {
 		padding-right: 15px;
 	}
 }
+
 
 #userSet .new-pwd {
 	background: @outLetGray;
