--- a/templates/common/browseDetail.html
+++ b/templates/common/browseDetail.html
@@ -1,54 +1,58 @@
 <div id="repoDetail">
   <div class="row head">
-    <div class="col-xs-12 col-md-10 col-md-offset-1">
-      <div class="header">
-        <div class="repo-name">Private Repository</div>
-        <div class="repo-user">{{repoInfo.repoName}} <span class="fa fa-star"></span></div>
-        <div class="repo-status">Last pushed: Never</div>
+    <div class="col-xs-12 col-md-10 col-md-offset-1 header">
+      <div class="row">
+        <div class="col-xs-12 pad-no">
+          <div class="repo-type">
+            <span class="chosed-type" (click)="isShowTypes()">
+              {{chosedType}}
+              <i class="fa fa-caret-down"></i>
+            </span>
+            <ul *ngIf="isShowType">
+              <li *ngFor="let item of repoDetail.list" (click)="changeType(item)">{{item.type}}</li>
+            </ul>
+          </div>
+          <div class="pull-right">
+            <!-- <div class="repo-name">Private Repository</div> -->
+            <div class="repo-user">{{repoDetail.namespace}}/{{repoDetail.repository}} <span class="fa fa-star"></span></div>
+            <div class="repo-status">Last pushed: {{repoDetail.time}}</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  
-      <ul class="row nav nav-tabs repo-nav" role="tablist">
-        <li class="col-xs-12 col-md-1 blank"><a href="#bastInfo" id="bastInfo-tab" role="tab" data-toggle="tab" aria-controls="bastInfo" aria-expanded="true">.</a></li>
-        <li class="col-xs-12 col-md-2 active "><a href="#bastInfo" id="bastInfo-tab" role="tab" data-toggle="tab" aria-controls="bastInfo" aria-expanded="true">Repo Info</a></li>
-        <li class="col-xs-12 col-md-2 "><a href="#tags" role="tab" id="tags-tab" data-toggle="tab" aria-controls="tags" aria-expanded="false">Tags</a></li>
-
-        <li class="col-xs-12 col-md-2 "><a href="#collaborators" role="tab" id="collaborators-tab" aria-controls="collaborators" data-toggle="tab" aria-expanded="false" >Collaborators</a></li>
-
-        <li class="col-xs-12 col-md-2 "><a href="#buildHistory" role="tab" aria-controls="buildHistory" aria-expanded="false" id="buildHistory-tag" data-toggle="tab">Build History</a></li>
-        <li class="col-xs-12 col-md-2 "><a href="#buildTriggers" role="tab" aria-controls="buildTriggers" aria-expanded="false" id="buildTriggers-tag" data-toggle="tab">Build Triggers</a></li>   
-      </ul>
-   
   <div class="row content">
-    <ul class="col-xs-1 repo-type">
-      <li [ngClass]="type===1? 'active' : '' " (click)="changeType(1)">dockyardv1</li>
-      <li [ngClass]="type===2? 'active' : '' " (click)="changeType(2)">dockyardv2</li>
-      <li [ngClass]="type===3? 'active' : '' " (click)="changeType(3)">dockyardv3</li>
-      <li [ngClass]="type===4? 'active' : '' " (click)="changeType(4)">dockyardv4</li>
+    <ul class="col-xs-12 col-md-1 nav nav-tabs repo-nav" role="tablist">
+      <li class="active "><a href="#bastInfo" id="bastInfo-tab" data-toggle="tab" aria-controls="bastInfo" aria-expanded="true">Repo Info</a></li>
+      <li><a href="#tags"  id="tags-tab" data-toggle="tab" aria-controls="tags" aria-expanded="false">Tags</a></li>
+
+      <li><a href="#collaborators"  id="collaborators-tab" aria-controls="collaborators" data-toggle="tab" aria-expanded="false" >Collaborators</a></li>
+
+      <li><a href="#buildHistory" aria-controls="buildHistory" aria-expanded="false" id="buildHistory-tag" data-toggle="tab">Build History</a></li>
+      <li><a href="#buildTriggers"  aria-controls="buildTriggers" aria-expanded="false" id="buildTriggers-tag" data-toggle="tab">Build Triggers</a></li>   
     </ul>
-    <div class="col-xs-10 tab-content user-content">
+    <div class="col-xs-12 col-md-10 tab-content user-content">
       <div class="tab-pane active bast-info" id="bastInfo">
         <div class="row">
           <div class="col-xs-12 col-md-7 pad-no">
             <div class="form-group mar-t-thirty">
               <h5>Short Description <span class="fa fa-pencil"></span></h5>
-              <textarea rows="3" readonly="readonly">Short Description Short Description  Short Description Short De</textarea>
+              <textarea rows="3" readonly="readonly">{{baseInfo.shortDesc}}</textarea>
               <input type="button" value="OK" class="ok-btn" />
             </div>
             <div class="form-group mar-t-thirty">
               <h5>Full Description <span class="fa fa-pencil"></span></h5>
-              <textarea rows="3" readonly="readonly">Full Description</textarea>
+              <textarea rows="3" readonly="readonly">{{baseInfo.fullDesc}}</textarea>
               <input type="button" value="OK" class="ok-btn" />
             </div>
           </div>
           <div class="col-xs-12 col-md-4 col-md-offset-1 pad-no">
             <div class="form-group mar-t-thirty">
-              <h5>OpsHub Pull Command</h5>
-              <textarea class="pull-command-text" rows="3" readonly="readonly">OpsHub Pull Lyy/123456789456488</textarea>
+              <h5>{{repoDetail.repository}} Pull Command</h5>
+              <textarea class="pull-command-text" rows="3" readonly="readonly">{{baseInfo.command}}</textarea>
             </div>
             <div class="make-public mar-t-thirty">
-              <h5 class="make-public-h5">Make this Repository Public</h5>
+              <h5 class="make-public-h5">change this Repository privilege</h5>
               <input type="button" class="make-public-btn" value="Make public" />
             </div>  
             <input type="button" class="delete-repo-btn mar-t-thirty" value="Delete Repository" />
@@ -66,23 +70,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td><a href="javascript:;">v0.0.1</a></td>
-              <td>lyy132646</td>
-              <td>15691</td>
-              <td>2015.5.5</td>
-            </tr>
-            <tr>
-              <td><a href="javascript:;">v0.0.2</a></td>
-              <td>lyy132646</td>
-              <td>15691</td>
-              <td>2015.5.5</td>
-            </tr>
-            <tr>
-              <td><a href="javascript:;">v0.0.3</a></td>
-              <td>lyy132646</td>
-              <td>15691</td>
-              <td>2015.5.5</td>
+            <tr *ngFor="let item of tags">
+              <td><a href="javascript:;">{{item.tag}}</a></td>
+              <td>{{item.image}}</td>
+              <td>{{item.size}}</td>
+              <td>{{item.time}}</td>
             </tr>
           </tbody>
         </table>
@@ -99,20 +91,10 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td><a href="javascript:;">lyy132646</a></td>
-                  <td>Collaborator</td>
-                  <td><span class="remove">Remove</span></td>
-                </tr>
-                <tr>
-                  <td><a href="javascript:;">lyy132646</a></td>
-                  <td>Collaborator</td>
-                  <td><span class="remove">Remove</span></td>
-                </tr>
-                <tr>
-                  <td><a href="javascript:;">lyy132646</a></td>
-                  <td>Collaborator</td>
-                  <td><span class="remove">Remove</span></td>
+                <tr *ngFor="let item of collaborators;let i = index ">
+                  <td><a href="javascript:;">{{item.username}}</a></td>
+                  <td>{{item.access}}</td>
+                  <td><span class="remove" (click)="delCollaborator(item,i)">Remove</span></td>
                 </tr>
               </tbody>
             </table>
@@ -120,8 +102,8 @@
           <div class="col-xs-12 col-md-5 col-md-offset-1 right-block">
               <h5>Add User</h5>
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Username">
-                <span class="input-group-addon"><i class="fa fa-plus"></i></span>
+                <input type="text" class="form-control" placeholder="Username" [(ngModel)]="collaborator.username">
+                <span class="input-group-addon" (click)="addCollaborator()"><i class="fa fa-plus"></i></span>
               </div>
           </div>
         </div>
@@ -409,6 +391,3 @@
     </div>
   </div>
 </div>
-
-
-
